# KeepActive

./: CMakeLists.txt  README.md
src/: Window.cpp  Window.h  main.cpp
